2022/11/29 v2 将页面刷新修改为路由组件刷新

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- 引入Vue -->
     <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.bootcss.com/github-markdown-css/2.10.0/github-markdown.min.css"
+    />
     <!-- 引入样式 -->
     <link
       rel="stylesheet"
